# FunctionalProgramming

lab1/src/: Common.hs
lab1/test/: Spec.hs
lab2/: ChangeLog.md  README.md
lab2/app/: Main.hs
lab2/test/: Spec.hs
task01/: task01.cabal
task01/app/: Main.hs
task01/src/: Lib.hs
task01/test/: Unit.hs
task05/: task05.cabal
task05/app/: Main.hs
task05/sample-data/: graph.txt
task05/src/: AllSimplePaths.hs  Graph.hs
task05/test/: Unit.hs
task08/: ChangeLog.md  HaXML.cabal  README.md  package.yaml
task08/app/: Main.hs
task08/xml/: input_tariff.xml  verify_tariff.dtd
task09/: ChangeLog.md  SpheresSimulator.cabal  package.yaml
task09/app/: Main.hs
