cabal-version:  1.12
name:           task01
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , random
  default-language: Haskell2010

executable task01-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      task01
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite task01-test
  type: exitcode-stdio-1.0
  main-is: Unit.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      task01
    , base >=4.7 && <5
    , HUnit
  default-language: Haskell2010

